--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,6 +1,10 @@
 html, body, section {
   height: 100%;
 }
+body {
+  height: 100%;
+  background: #f2f2f2!important;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: 'neosansregular', sans-serif;
   font-weight: 300;
@@ -165,8 +169,7 @@ a:hover, a:active, a:focus {
   border-bottom: none;
   background-attachment: scroll;
   background-clip: border-box;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: linear-gradient(to top, #53C4CC 0%, #43AAC9 40%, #3192C7 100%);
+  background-color: #5a5a5d;
   background-origin: padding-box;
   background-position: 0 0;
   background-repeat: repeat;
@@ -197,14 +200,18 @@ a:hover, a:active, a:focus {
   color: white;
   padding-top: 5px!important;
 }
+.pagination>li>a, .pagination>li>span {
+  border: none !important;
+  background-color: transparent;
+}
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>li>a:hover {
+  border-radius: 50%;
+}
+.pagination>.active>a, .pagination>.active>a:focus {
+  background-color: #2d8ccf;
+}
 .white-color {
   color: white!important;
-}
-.dropdown .caret {
-  margin-top: 0px!important;
-  color: white!important;
-  border-top-color: white!important;
-  border-bottom-color: white!important;
 }
 .dropdown-menu-nb {
   background-color:transparent !important;
@@ -290,9 +297,10 @@ a:hover, a:active, a:focus {
   background-color: #eee;
   position:fixed;
   top: 0;
+  box-shadow: 1px 0px 3px #ccc;
 }
 .menu-buttons {
-  margin-top: 30px;
+  margin-top: 20px;
   height: 70%;
   width: 100px;
 }
@@ -301,21 +309,14 @@ a:hover, a:active, a:focus {
   height: 75px;
   text-align: center;
   position: relative;
+  padding-top: 5px;
 }
 a.nb-active, a.nb-active p.menu-text {
-  color: #58595b !important;
+  color: #fff !important;
   position: relative !important;
 }
-a.nb-active > .menu-button::before {
-  content: "";
-  width:0;
-  height:0;
-  border-top:10px solid transparent;
-  border-bottom:10px solid transparent;
-  border-right:10px solid white;
-  position: absolute;
-  left: 90px;
-  top: 10px;
+a.nb-active > .menu-button {
+  background-color: grey;
 }
 .menu-text {
   text-align: center;
@@ -324,12 +325,14 @@ a.nb-active > .menu-button::before {
   line-height: 1;
   font-size: 12px;
 }
+p.menu-text {
+  margin: 0 0 5px;
+}
 .menu-icon {
   color: #9e9e9e;
   font-size: 25px!important;
 }
 .action-button, a.action-button {
-  display: inline;
   padding: .45em 1.4em;
   font-size: 10pt;
   font-family: 'neosanslight', sans-serif;
@@ -340,7 +343,23 @@ a.nb-active > .menu-button::before {
   vertical-align: baseline;
   border-radius: .30em;
   cursor: pointer;
-  border: solid 0px;
+  border: none;
+}
+button.action-button {
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 14pt;
+  padding: 10px 60px;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+}
+button.action-button:hover {
+  transition: .2s ease-out;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.14), 0 1px 12px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.2);
+  filter: brightness(110%)
 }
 .action-button-start {
   color: white;
@@ -370,6 +389,7 @@ a.nb-active > .menu-button::before {
 .action-icon {
   margin: 3px;
   cursor: pointer;
+  font-size: 14pt;
 }
 .action-icon.disabled {
   color: #ccc;
@@ -411,7 +431,30 @@ a.nb-active > .menu-button::before {
   margin-left: 30px;
 }
 .section-title {
-  height: auto;
+  height: 75px;
+  background-color: white;
+  margin-bottom: 30px;
+  padding-top: 16px;
+}
+.section-title .item {
+  font-family: 'Open Sans', sans-serif;
+  padding: 28px 30px;
+  border-right: 1px solid #e2e2e2;
+  color: #9e9e9e;
+  position: relative;
+  top: -2px
+}
+.section-title .item.title {
+  font-family: 'neosansregular', sans-serif;
+  padding: 25px 30px;
+  font-size: 18pt;
+  color: #58595b;
+  position: relative;
+  top: 0;
+}
+.section-title .item:hover {
+  background-color: #e2e2e2;
+  cursor: pointer;
 }
 .section-tabs {
   height: 41px;
@@ -420,39 +463,41 @@ a.nb-active > .menu-button::before {
   border-right-color: white;
   border-left-color: white;
   border-top-color: white;
+  display: flex;
 }
 .section-content {
-  margin-left: 31px;
-  margin-right: 30px;
-  border-top: solid 1px white;
-  border-left: solid 1px #ddd;
-  border-bottom: solid 1px #ddd;
-  border-right: solid 1px #ddd;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 30px;
   padding: 20px 15px;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
-  margin-bottom: 30px;
-  background-color: white!important;
+}
+.section-content #pluginMonitoring {
+  background-color: white;
+  box-shadow: 0px 3px 14px #c3c3c3;
 }
 .ticket-container {
   width: 80%;
   height: auto !important;
   height: 100%;
-  border: 1px solid #cecece;
+  background-color: white;
   position: relative;
   margin: auto;
-  padding: 15px 0;
-  font-family: 'neosansregular', sans-serif;
+  padding: 15px 0 70px;
+  font-family: 'Open Sans', sans-serif;
+  box-shadow: 0px 3px 14px #c3c3c3;
 }
 .ticket-header {
   width: 100%;
-  height: 35px;
+  height: 60px;
   border-bottom: 1px solid #cecece;
 }
 .ticket-title {
-  font-family: 'neosansbold', sans-serif;
-  font-size: 12pt;
-  text-transform: capitalize;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16pt;
+  text-transform: Initial;
+  line-height: 50%;
 }
 .ticket-body {
   padding: 15px;
@@ -469,6 +514,11 @@ a.nb-active > .menu-button::before {
   padding: 15px 0;
   border-top: 1px solid #cecece;
   border-bottom: 1px solid #cecece;
+}
+.ticket-footer .right {
+  float: right;
+  position: relative;
+  top: -7px;
 }
 .ticket-date, .ticket-user-info {
   display: inline-block;
@@ -528,9 +578,6 @@ a.nb-active > .menu-button::before {
 .number-2 {
   padding: 4px 5px 6px 8px;
 }
-.table-striped tbody tr:nth-child(even) td, .table-striped tbody tr:nth-child(even) th {
-  background-color: #eee!important;
-}
 .public-cloud-form {
   padding-left: 30px!important;
   padding-top: 10px;
@@ -576,10 +623,6 @@ a.nb-active > .menu-button::before {
 .grey-color {
   color: grey!important;
 }
-body {
-  height: 100%;
-  background: white!important;
-}
 .wrapp {
   height: calc(100% - 0px);
 }
@@ -606,26 +649,51 @@ body {
   min-height: 250px!important;
 }
 .dashboard-icons {
-  height: auto;
-  width: 20%!important;
-  margin: 5%;
+  height: 130px;
+  width: auto;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
   font-family: 'neosansregular', sans-serif;
+  color: white;
   text-align: center;
-  border: solid 1.5px #ededed;
+  background-color: #fff;
   border-radius: 5px;
   padding: 15px 0;
+  position: relative;
+  box-shadow: 0 5px 5px #ccc;
+}
+.dashboard-icons:hover {
+  filter: brightness(110%);
+  transition: all 0.3s ease-in-out;
+}
+.dashboard-icons .left, .dashboard-icons .right {
+  display: inline-block;
+  position: relative;
+}
+.dashboard-icons .left {
+  bottom: 32px;
+  right: 15%;
+  color: rgba(255,255,255,0.5);
+  font-size: 117pt;
+}
+.dashboard-icons .right {
+  bottom: 73%;
+  right: 55px;
+  text-align: left;
+}
+.dashboard-icons.first {
+  background-color: #2d8ccf;
+}
+.dashboard-icons.second {
+  background-color: #ffc524;
+}
+.dashboard-icons.third {
+  background-color: #db0720;
 }
 .dashboard-icons-counter {
-  font-size: 14pt;
-}
-.dashboard-icons-counter.first {
-  color: #2d8ccf;
-}
-.dashboard-icons-counter.second {
-  color: #ffc524;
-}
-.dashboard-icons-counter.third {
-  color: #db0720;
+  font-size: 30pt;
 }
 .dashboard-minus {
   position: absolute;
@@ -704,12 +772,15 @@ body {
 }
 /*Widget*/
 .widget {
-  border: 1px solid #cecece;
   padding: 10px;
-  min-height: 447px;
-  max-height: 450px;
+  height: 350px;
   font-family: 'neosanslight', sans-serif;
-  margin: 10px;
+  margin: 10px 0;
+  background-color: #fff;
+  box-shadow: 0 5px 5px #ccc;
+}
+.create {
+  background-color: #eaeaea;
 }
 .widget-p {
   line-height: 70px;
@@ -718,10 +789,14 @@ body {
   font-size: 14pt;
   margin-bottom: 10px;
 }
-.widget-create {
-  height: 370px !important;
-  background: url('../images/widget-background.png') top center no-repeat;
-  background-size: cover;
+.widget select.form-control {
+  height: 40px;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #fff;
+  border: 1px solid white;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
 }
 .min-height-subsection {
   min-height: 360px;
@@ -786,43 +861,43 @@ body {
 }
 /*Start monitoring*/
 ol {
-    counter-reset: li;
-    list-style: none;
-    *list-style: decimal;
-    font: 15px 'neosansregular', sans-serif;
-    padding: 0;
-    margin-bottom: 4em;
+  counter-reset: li;
+  list-style: none;
+  *list-style: decimal;
+  font: 15px 'neosansregular', sans-serif;
+  padding: 0;
+  margin-bottom: 4em;
 }
 ol.rounded-list {
   margin-left: 20px;
 }
 .rounded-list p.rounded-list-title {
-    position: relative;
-    display: block;
-    padding: .4em .4em .4em 2em;
-    *padding: .4em;
-    margin: .5em 0;
-    color: #fff;
-    text-decoration: none;
-    border-radius: .3em;
-    transition: all .3s ease-out;
+  position: relative;
+  display: block;
+  padding: .4em .4em .4em 2em;
+  *padding: .4em;
+  margin: .5em 0;
+  color: #fff;
+  text-decoration: none;
+  border-radius: .3em;
+  transition: all .3s ease-out;
 }
 .rounded-list p.rounded-list-title:before {
-    content: counter(li);
-    counter-increment: li;
-    position: absolute;
-    left: -1.3em;
-    top: 50%;
-    margin-top: -1.3em;
-    background: #2d8ccf;
-    height: 2.4em;
-    width: 2.4em;
-    line-height: 1.9em;
-    border: .3em solid #fff;
-    text-align: center;
-    font-weight: bold;
-    border-radius: 2em;
-    transition: all .3s ease-out;
+  content: counter(li);
+  counter-increment: li;
+  position: absolute;
+  left: -1.3em;
+  top: 50%;
+  margin-top: -1.3em;
+  background: #2d8ccf;
+  height: 2.4em;
+  width: 2.4em;
+  line-height: 1.9em;
+  border: .3em solid #fff;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 2em;
+  transition: all .3s ease-out;
 }
 .rounded-list p.rounded-list-title span {
   color: #444;
@@ -928,12 +1003,22 @@ ol.rounded-list {
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
   height: 100%!important;
+  color: #2d8ccf !important;
+  background-color: transparent;
+  border: 3px solid transparent;
+  border-bottom-color: #2d8ccf;
 }
 .nav-tabs > li > a {
   height: 100%!important;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 14pt;
 }
 .nav-tabs > li {
   height: calc(100% + 1px)!important;
+  flex-grow: 1;
+  text-align: center;
+  background-color: transparent;
 }
 .navbar .nav > li.tab-link {
   border: none !important;
@@ -946,14 +1031,14 @@ ol.rounded-list {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-top: 6px;
+  margin-top: 9px;
   margin-left: 10px;
   border: none;
-  color: #0571a9 !important;
-  font-size: 33pt;
+  color: #fff !important;
+  font-size: 27pt;
 }
 .onboarding-button:hover {
-  color: #03486b !important;
+  color: #ccc !important;
 }
 .onboarding-button i {
   position: relative;
@@ -969,12 +1054,6 @@ ol.rounded-list {
   height: auto;
   margin: auto;
 }
-.os i {
-  position: absolute;
-  right: 2px;
-  top: 1px;
-  font-size: 11px;
-}
 .sprites {
   background-image: url('../images/sprites.png');
   background-size: 1415px 483px;
@@ -988,10 +1067,16 @@ ol.rounded-list {
   height: 15px;
   border-radius: 50%;
   position: absolute;
-  bottom: 38%;
-  left: 65%;
+  bottom: 50%;
+  left: 74%;
   background-color: white;
   border: 1px solid #f2f2f2;
+}
+.os i {
+  position: absolute;
+  right: 1px;
+  top: -1px;
+  font-size: 13px;
 }
 .sprites.os-ubuntu.small {
   width: 11px;
@@ -1181,10 +1266,13 @@ ol.rounded-list {
   bottom: -2px;
 }
 .icon-state {
-  font-size: 2.5rem !important;
+  font-size: 3.5rem;
   vertical-align: middle;
   position: relative;
   bottom: -4px;
+}
+.icon-state.reset {
+  bottom: -2px !important;
 }
 .medium {
   font-size: 4rem !important;
@@ -1261,9 +1349,11 @@ table, th, td {
   font-size: 10pt;
 }
 table {
-  border: 1px solid #CECECE;
   border-collapse: collapse;
   width: 100%;
+  box-shadow: 0px 3px 14px #c3c3c3;
+  margin-bottom: 10px;
+  background-color: #fff;
 }
 th.column-icon {
   width: 70px;
@@ -1272,14 +1362,20 @@ th.column-button {
   width: 135px;
 }
 th, td {
-  border: 1px solid white;
   border-collapse: collapse;
   vertical-align: middle;
-  height: 40px;
+  height: 60px;
+}
+th.fix {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1040;
 }
 td {
   text-align: left;
   padding-left: 7px;
+  word-break: break-word;
 }
 td.icons {
   text-align: center;
@@ -1287,11 +1383,14 @@ td.icons {
 }
 th {
   text-align: center;
-  background-color: #cecece;
-  color: white;
+  color: #888888;
   padding: 0 10px;
+  font-size: 14pt;
 }
-tr:nth-child(even) {
+tr.content {
+  border-bottom: 1px solid #eaeaea;
+}
+tr.content:hover {
   background-color: #f2f2f2;
 }
 /*Placeholders*/
@@ -1314,7 +1413,43 @@ tr:nth-child(even) {
 .highcharts-credits {
   display: none;
 }
+.highcharts-root {
+  height: 300px;
+}
+.hichart-main-container {
+  width: 100%;
+}
+.highcharts-container {
+  width: 100%!important;
+  height: 300px!important;
+}
+#container2, #container1 {
+  height: 300px;
+}
 /*Media Queries*/
+@media screen and (max-width: 1024px) {
+  .section-content {
+    margin: 0 !important;
+    border: none;
+  }
+  .section-tabs {
+    margin-left: 5px !important;
+  }
+  th {
+    font-size: 12pt;
+  }
+  .icon-state {
+    font-size: 2.5rem;
+  }
+  .ticket-footer {
+    height: 65px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .carousel-indicators {
+    bottom: -75px;
+  }
+}
 @media screen and (max-width: 768px) {
   .principal-section {
     width: 100%;
@@ -1326,17 +1461,18 @@ tr:nth-child(even) {
   #sidebar {
     width: 100% !important;
     height: 80px !important;
-    padding-top: 10px;
+    padding-top: 0;
     position: fixed;
     top: initial;
     bottom: 0;
     z-index: 3;
+    box-shadow: 0px -1px 3px #ccc;
   }
   .menu-buttons {
     width: 100%;
     position: relative;
     left: 25%;
-    margin-top: 10px;
+    margin-top: 0;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1347,17 +1483,6 @@ tr:nth-child(even) {
   .menu-button.last {
     right: 0;
   }
-  a.nb-active > .menu-button::before {
-  content: "";
-  width:0;
-  height:0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-top: 10px solid #fff;
-  position: absolute;
-  left: 37%;
-  top:-20px;
-  }
   .menu-text {
     line-height: 1;
     font-size: 8pt;
@@ -1367,6 +1492,16 @@ tr:nth-child(even) {
   }
   .alert-badge {
     left: 42px;
+  }
+  .section-tabs {
+    margin: 0 !important;
+  }
+  .dashboard-icons .left {
+    font-size: 100pt;
+  }
+  .dashboard-icons .right {
+    bottom: 50%;
+    right: 30px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -1390,12 +1525,6 @@ tr:nth-child(even) {
   .modal.fade.in {
     padding-left: 0 !important;
   }
-  .section-content {
-    margin: 0 !important;
-  }
-  .section-tabs {
-    margin: 0 !important;
-  }
   .login-box {
     top: 0 !important;
   }
@@ -1413,6 +1542,9 @@ tr:nth-child(even) {
   .dashboard-icons-info {
     font-size: 8pt;
   }
+  .ticket-container {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 375px){
   .menu-buttons {
@@ -1420,6 +1552,12 @@ tr:nth-child(even) {
   }
   .menu-button {
     width: 70px;
+  }
+  .login-logo {
+    width: 250px !important;
+  }
+  .ticket-date, .ticket-user-info, .ticket-reply-header {
+    font-size: 9pt;
   }
 }
 @media screen and (max-width: 320px){
@@ -1450,31 +1588,45 @@ tr:nth-child(even) {
   text-align: center;
   height: 100%;
   width: 100%;
-  background-image: url('../images/background-login.jpg');
+  background-image: url(../images/background-login-new.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   position: relative;
   z-index: 10006;
+  color: white;
 }
 .login-form {
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  clear: both;
+  max-width: 450px;
+}
+.login-form > .form-group > .input-group > .input-group-addon {
+  background-color: #2b2b2b;
+  border: none;
+}
+.login-form > .form-group > .input-group > input.form-control {
+  background-color: rgba(255, 255, 255, 0.3);
+  background-image: none;
+  border: none;
+  color: white;
 }
 .login-logo {
-  height: 89px;
-  width: 190px;
+  height: 124px;
+  width: 313px;
   margin: auto;
   margin-top: 20px;
-  background-image: url('../images/logo-nubity.png');
+  background-image: url('../images/logo-nubity-w.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
 .login-box {
-  background-color: white;
-  border: solid 1px #ccc;
-  border-radius: 8px;
-  position: absolute;
-  top: 15%;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
 .signup-box {
   background-color: white;
@@ -1484,7 +1636,7 @@ tr:nth-child(even) {
   top: 5%;
 }
 .login-title {
-  text-align: left;
+  text-align: center;
   font-weight: bold;
   font-size: 25px;
   font-family: 'neosansregular';
@@ -1499,6 +1651,9 @@ tr:nth-child(even) {
 .link-login {
   line-height: 40px;
   color: #2d8ccf;
+}
+a.link-login:hover {
+  color: #b7b7b7;
 }
 .login-button {
   background-color: #50c00a;
@@ -1518,15 +1673,21 @@ tr:nth-child(even) {
 }
 .login-p {
   display: inline;
-  color: grey;
+  color: #b7b7b7;
 }
 .login-p-navbar {
   display: inline;
   color: white;
 }
+.login-footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
 .top-div {
   text-align: right;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 .top-div-navbar {
   text-align: right;
@@ -1650,7 +1811,7 @@ tr:nth-child(even) {
     box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
   }
 }
-
+/*Toggle switch*/
 .rc-switch {
   position: relative;
   display: inline-block;
@@ -1790,6 +1951,7 @@ tr:nth-child(even) {
             transform: scale(1);
   }
 }
+/*Carousel*/
 .carousel-container {
   margin:30px;
 }
@@ -1808,15 +1970,8 @@ tr:nth-child(even) {
   display: block;
 }
 .allHeight {
-  height: 380px;
+  height: 300px;
   width: 100%;
-}
-.hichart-main-container {
-  width: 100%;
-}
-.highcharts-container {
-  width: 100%!important;
-  height: 380px!important;
 }
 .alert-margin {
   margin-left: 15px;
